# screenpy_requests

./: .cruft.json  .flake8  .isort.cfg  .pre-commit-config.yaml  HISTORY.md  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml
docs/: conf.py  cookbook.rst  extended_api.rst  index.rst
docs/extended_api/: abilities.rst  actions.rst  questions.rst
screenpy_requests/: __init__.py  __version__.py  exceptions.py
screenpy_requests/abilities/: __init__.py  make_api_requests.py
screenpy_requests/actions/: __init__.py  add_header.py  send_api_request.py  set_headers.py
screenpy_requests/questions/: __init__.py  body_of_the_last_response.py  cookies.py  headers_of_the_last_response.py  status_code_of_the_last_response.py
tests/: conftest.py  test__version__.py  test_abilities.py  test_actions.py  test_copyright.py  test_namespace.py  test_questions.py
